--- a/src/app/people/inspect/inspect.component.html
+++ b/src/app/people/inspect/inspect.component.html
@@ -61,7 +61,7 @@
   </main>
   <footer>
     <mat-dialog-actions class="cont1">
-      <button mat-raised-button (click)="openKinship(data)" [color]="'list-it'" class="but1">
+      <button mat-raised-button mat-dialog-close (click)="openKinship(data)" [color]="'list-it'" class="but1">
         List Kinships
       </button>
       <button
