--- a/src/app/people/inspect.kinships/inspect.component.html
+++ b/src/app/people/inspect.kinships/inspect.component.html
@@ -83,8 +83,8 @@
       <ng-container matColumnDef="buttons">
         <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
         <mat-cell *matCellDef="let element">
-          <mat-icon matTooltip="Edit Person" class="icon">edit</mat-icon>
-          <mat-icon matTooltip="Delete Person" class="icon delete"
+          <mat-icon matTooltip="Edit Kinship" class="icon">edit</mat-icon>
+          <mat-icon matTooltip="Delete Kinship" class="icon delete"
             >delete_forever</mat-icon
           >
         </mat-cell>
