Fixing Select values Example by Juan Carlos Yovera

--- a/src/app/kinships/create/create.component.html
+++ b/src/app/kinships/create/create.component.html
@@ -24,7 +24,7 @@
               <label class="attributes">Name: </label><label>{{ firstPerson.name + ' ' + firstPerson.lastName }}</label>
             </p>
             <p>
-              <label class="attributes">Birthdate: </label><label>{{ firstPerson.birth }}</label>
+              <label class="attributes">Birthdate: </label><label>{{ firstPerson.birthdate }}</label>
             </p>
             <p>
               <label class="attributes">Gender: </label><label>{{ firstPerson.gender }}</label>
@@ -57,7 +57,7 @@
               </label><label>{{ secondPerson.name + ' ' + secondPerson.lastName }}</label>
             </p>
             <p>
-              <label class="attributes">Birthdate: </label><label>{{ secondPerson.birth }}</label>
+              <label class="attributes">Birthdate: </label><label>{{ secondPerson.birthdate }}</label>
             </p>
             <p>
               <label class="attributes">Gender: </label><label>{{ secondPerson.gender }}</label>
