--- a/src/app/people/create/create.component.html
+++ b/src/app/people/create/create.component.html
@@ -18,7 +18,7 @@
               pattern="[a-zA-Z\s]*"
               minlength="3"
               formControlName="name"
-              [(ngModel)] = "registro.Name"
+              [(ngModel)] = "registro.name"
               required
             />
 
