--- a/src/app/kinships/list/listkinship.component.scss
+++ b/src/app/kinships/list/listkinship.component.scss
@@ -1,52 +1,64 @@
-table{
+table {
   width: 100%;
 }
 
-
 .header {
-padding: 5px;
+  padding: 5px;
 }
 
 .filter {
-display: block;
+  display: block;
 }
 
-.icon{
-background:#8ad1f3;
-color: white;
-margin:2px;
-border-radius: 5px;
-}
-.delete{
-background: #fb7a7a;
+.icon {
+  background: #8ad1f3;
+  color: white;
+  margin: 2px;
+  border-radius: 5px;
 }
 
-mat-form-field{
-width: 70%;
-left: 0px;
+.delete {
+  background: #fb7a7a;
 }
 
-mat-header-cell, mat-cell {
-justify-content:center;
+mat-form-field {
+  width: 75%;
+  left: 0px;
 }
 
-.options{
-width: 25%;
-display: inline-flex;
-margin-left: 5%;
-}
-.buttons{
-margin-left: 6%;
-text-align: right;
-display: inline-block;
+mat-header-cell,
+mat-cell {
+  justify-content: center;
 }
 
-@media screen and (min-width: 400px) and (max-width: 767px) {
-  .buttons{
+.options {
+  display: inline-flex;
+  margin-left: 5%;
+}
 
+.buttons {
+  margin-left: 6%;
+  text-align: right;
+  display: inline-block;
+}
+
+.headerTable {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+
+@media screen and (min-width: 400px) and (max-width: 770px) {
+  .buttons {
     margin-left: 5%;
     text-align: center;
     display: inline-block;
     margin-bottom: 5px;
-    }
+  }
+
+  .headerTable {
+    flex-direction: column;
+  }
 }
