--- a/src/app/people/list/list.component.scss
+++ b/src/app/people/list/list.component.scss
@@ -1,7 +1,8 @@
-table{
-    width: 100%;
+table {
+  width: 100%;
 }
-.colum-name{
+
+.colum-name {
   text-align: left;
 }
 
@@ -13,58 +14,65 @@ table{
   display: block;
 }
 
-.icon{
-  background:#8ad1f3;
+.icon {
+  background: #8ad1f3;
   color: white;
-  margin:2px;
+  margin: 2px;
   border-radius: 5px;
 }
-.delete{
+
+.delete {
   background: #fb7a7a;
 }
 
-mat-form-field{
+mat-form-field {
   width: 70%;
   left: 0px;
 }
 
-mat-header-cell, mat-cell {
-  justify-content:left;
+mat-header-cell,
+mat-cell {
+  justify-content: left;
 }
 
-.options{
+.options {
   width: 25%;
   display: inline-flex;
   margin-left: 5%;
 }
-.buttons{
+
+.buttons {
   margin-left: 6%;
   text-align: right;
   display: inline-block;
 }
 
-@media screen and (min-width: 400px) and (max-width: 767px){
-  .colum-doctype{
+@media screen and (min-width: 400px) and (max-width: 767px) {
+  .colum-doctype {
     display: none;
   }
 }
-@media screen and (min-width: 400px) and (max-width: 500px){
-  .colum-doctype{
+
+@media screen and (min-width: 400px) and (max-width: 500px) {
+  .colum-doctype {
     display: none;
   }
-  span{
+
+  span {
     display: none;
   }
 }
 
 
-@media screen and (min-width: 359px) and (max-width: 400px){
-  .colum-doctype{
+@media screen and (min-width: 359px) and (max-width: 400px) {
+  .colum-doctype {
     display: none;
   }
-  .colum-country{
+
+  .colum-country {
     display: none;
   }
+
   span {
     display: none;
   }
