--- a/src/app/kinships/edit/edit.component.html
+++ b/src/app/kinships/edit/edit.component.html
@@ -1,29 +1,34 @@
 <section fxLayout="row wrap" fxLayoutAlign="center center" class="hide-scroll">
-    <mat-card fxFlex="500px" fxFlex.xs="100%" class="viewport">
-      <mat-card-title>Edit Kinship</mat-card-title>
-      <form [formGroup]="editkinship">
-            <div id="divForm">
-                <div class="px-2 py-2">
-                    <label>Person:</label>
-                      <mat-form-field>
-                        <input matInput formControlName="idPerson">
-                      </mat-form-field>
-                </div>
-                <div class="px-2 py-2">
-                    <label>Relative:</label>
-                      <mat-form-field>
-                        <input matInput formControlName="idRelative">
-                      </mat-form-field>
-                </div>
-                <div class="px-2 py-2">
-                    <label>Kinship:</label>
-                      <mat-select placeholder="Kinship" formControlName="kinship">
-                          <mat-option *ngFor="let relation of relations" [value]="relation.value">{{ relation.type }}</mat-option>
-                      </mat-select>
-                </div>
-              </div>
+  <mat-card fxFlex="500px" fxFlex.xs="100%" class="viewport">
+    <mat-card-title>Edit Kinship</mat-card-title>
+    <form [formGroup]="editkinship">
+      <div id="divForm">
+        <div class="px-2 py-2">
+          <mat-form-field>
+            <mat-label>Person</mat-label>
+            <input matInput formControlName="idPerson" readonly
+              value="{{ data.person.name + ' ' + data.person.lastName }}">
+          </mat-form-field>
+        </div>
+        <div class="px-2 py-2">
+          <mat-form-field>
+            <mat-label>Relative</mat-label>
+            <input matInput formControlName="idRelative" readonly
+              value="{{ data.relative.name + ' ' + data.relative.lastName }}">
+          </mat-form-field>
+        </div>
+        <div class="px-2 py-2" style="flex-direction: row;">
+          <mat-form-field>
+            <mat-label>Kinship</mat-label>
+            <mat-select placeholder="Kinship" [(value)]="relationSelected">
+              <mat-option *ngFor="let relation of relations" [value]="relation.value">{{ relation.type }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+      <br>
       <mat-card-actions>
-          <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary">Save</button>
       </mat-card-actions>
     </form>
   </mat-card>
