Fixing Select values Example by Juan Carlos Yovera

--- a/src/app/people/edit/edit.component.scss
+++ b/src/app/people/edit/edit.component.scss
@@ -12,9 +12,16 @@ mat-card{
 mat-card-content{
   align-content: center;
 }
+mat-card-actions{
+  justify-content: space-between;
+}
 .hide-scroll {
   overflow: hidden;
 }
 .viewport{
   overflow: auto;
 }
+.but2{
+  margin-right: 11px !important;
+}
+
