Fixing Inspect Kinship's

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,10 @@
     <mat-sidenav #sidenav>
       <mat-nav-list>
         <a class="side-menu-link" [routerLink]="['/list']" mat-list-item
-          >Manage</a
+          >People</a
+        >
+        <a class="side-menu-link" [routerLink]="['/kinships/list']" mat-list-item
+          >Kinship</a
         >
         <a class="side-menu-link" href="#" mat-list-item>Logout</a>
       </mat-nav-list>
