--- a/src/app/people/inspect/inspect.component.html
+++ b/src/app/people/inspect/inspect.component.html
@@ -17,45 +17,45 @@
     <mat-dialog-content class="">
       <p>
         <label class="attributes">Nombre: </label
-        ><label for="name">{{ data.person.name }}</label>
+        ><label for="name">{{ data.name }}</label>
       </p>
       <p>
         <label class="attributes">Last Name: </label
-        ><label for="name">{{ data.person.lastName }}</label>
+        ><label for="name">{{ data.lastName }}</label>
       </p>
       <p>
         <label class="attributes">Date of birth: </label
-        ><label for="birth">{{ data.person.birthdate }}</label>
+        ><label for="birth">{{ data.birthdate }}</label>
       </p>
       <p class="justify-content-between">
         <span>
           <label class="attributes">Document ID: </label
-          ><label for="id">{{ data.person.document }}</label>
+          ><label for="id">{{ data.document }}</label>
         </span>
         <span class="elem2">
           <label class="attributes">Type: </label
-          ><label for="type">{{ data.person.documentType }}</label>
+          ><label for="type">{{ data.documentType }}</label>
         </span>
       </p>
       <p>
         <label class="attributes">Gender: </label
-        ><label for="gender">{{ data.person.gender }}</label>
+        ><label for="gender">{{ data.gender }}</label>
       </p>
       <p>
         <label class="attributes">Country: </label
-        ><label for="country">{{ data.person.country }}</label>
+        ><label for="country">{{ data.country }}</label>
       </p>
       <p>
         <label class="attributes">Contact</label>
       </p>
 
       <p>
-        <label class="space attributes2">{{ data.person.contactType1 }}:</label>
-        <label class="space">{{ data.person.contact1 }}</label>
+        <label class="space attributes2">{{ data.contactType1 }}:</label>
+        <label class="space">{{ data.contact1 }}</label>
       </p>
       <p>
-          <label class="space attributes2">{{ data.person.contactType2 }}:</label>
-          <label class="space">{{ data.person.contact2 }}</label>
+          <label class="space attributes2">{{ data.contactType2 }}:</label>
+          <label class="space">{{ data.contact2 }}</label>
         </p>
     </mat-dialog-content>
   </main>
