--- a/src/app/people/inspect.kinships/inspect.component.html
+++ b/src/app/people/inspect.kinships/inspect.component.html
@@ -7,8 +7,7 @@
     <button
       mat-icon-button
       mat-dialog-close
-      aria-label="Example icon-button with a heart icon"
-    >
+      aria-label="Example icon-button with a heart icon">
       <mat-icon>close</mat-icon>
     </button>
   </div>
@@ -16,17 +15,15 @@
   <main>
     <mat-dialog-content>
       <p>
-        <label for="" style="font-size: 20px;">Details</label>
-      </p>
-      <p>
         <label for=""> <strong> Person Name: </strong></label>
         <label>
-          &nbsp;&nbsp; {{ data[0].namePerson }} {{ data[0].lastNamePerson }}
+          &nbsp;&nbsp; {{ data.name }} {{ data.lastName }}
         </label>
       </p>
       <p>
-        <label for=""> <strong> Person Document: </strong></label>
-        <label> &nbsp;&nbsp; {{ data[0].documentPerson }} </label>
+
+        <label> <strong> Person Document: </strong></label>
+        <label> &nbsp;&nbsp; {{ data.documentType }} {{ data.document }} </label>
       </p>
     </mat-dialog-content>
 
@@ -41,7 +38,7 @@
       class="mat-elevation-z8"
     >
       <ng-container matColumnDef="1">
-        <mat-header-cell
+        <mat-header-cell class="KinshipTable"
           id="titular"
           *matHeaderCellDef
           (click)="orderTable()"
@@ -49,26 +46,12 @@
           >Relative Name
         </mat-header-cell>
         <mat-cell class="colum-name" *matCellDef="let element">
-          {{ element.nameRelative }} {{ element.lastNameRelative }}
+          {{ element.relativeName }} {{ element.relativeLastName }}
         </mat-cell>
       </ng-container>
 
-      <ng-container matColumnDef="2">
-        <mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header
-          (click)="orderTable()"
-          disableClear
-        >
-          Relative Document
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element">
-          {{ element.documentRelative }}
-        </mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="3" class="colum-country">
-        <mat-header-cell
+      <ng-container matColumnDef="2" class="colum-country">
+        <mat-header-cell class="KinshipTable"
           class="colum-country"
           *matHeaderCellDef
           (click)="orderTable()"
@@ -81,7 +64,7 @@
         </mat-cell>
       </ng-container>
       <ng-container matColumnDef="buttons">
-        <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
+        <mat-header-cell class="KinshipTable" *matHeaderCellDef> Action </mat-header-cell>
         <mat-cell *matCellDef="let element">
           <mat-icon matTooltip="Edit Kinship" class="icon">edit</mat-icon>
           <mat-icon matTooltip="Delete Kinship" class="icon delete"
