--- a/src/app/people/inspect.kinships/inspect.component.scss
+++ b/src/app/people/inspect.kinships/inspect.component.scss
@@ -7,10 +7,10 @@
   width: 100%;
   padding: 8px;
 }
-.kinshipTable td {
-  border: 1px solid black;
-  padding: 8px;
-}
+// .kinshipTable td {
+//   border: 1px solid black;
+//   padding: 8px;
+// }
 .kinshipTable > td {
   font-weight: 600;
   font-size: 16px;
