--- a/src/app/kinships/edit/edit.component.html
+++ b/src/app/kinships/edit/edit.component.html
@@ -7,14 +7,14 @@
           <mat-form-field>
             <mat-label>Person</mat-label>
             <input matInput formControlName="idPerson" readonly
-              value="{{ data.person.name + ' ' + data.person.lastName }}">
+              value="{{ data.personName + ' ' + data.personLastName }}">
           </mat-form-field>
         </div>
         <div class="px-2 py-2">
           <mat-form-field>
             <mat-label>Relative</mat-label>
             <input matInput formControlName="idRelative" readonly
-              value="{{ data.relative.name + ' ' + data.relative.lastName }}">
+              value="{{ data.relativeName + ' ' + data.relativeLastName }}">
           </mat-form-field>
         </div>
         <div class="px-2 py-2" style="flex-direction: row;">
