--- a/src/app/people/inspect/inspect.component.html
+++ b/src/app/people/inspect/inspect.component.html
@@ -1,6 +1,6 @@
 <section class="mat-typography container p-2">
   <div class="row justify-content-between title-back">
-    <h4  class="mat-display-2 title" mat-dialog-title>
+    <h4 class="mat-display-2 title" mat-dialog-title>
       Person Details
     </h4>
 
@@ -54,14 +54,20 @@
         <label class="space">{{ data.person.contact1 }}</label>
       </p>
       <p>
-          <label class="space attributes2">{{ data.person.contactType2 }}:</label>
-          <label class="space">{{ data.person.contact2 }}</label>
-        </p>
+        <label class="space attributes2">{{ data.person.contactType2 }}:</label>
+        <label class="space">{{ data.person.contact2 }}</label>
+      </p>
     </mat-dialog-content>
   </main>
   <footer>
     <mat-dialog-actions class="cont1">
-      <button mat-raised-button [color]="'list-it'" class="but1">
+      <button
+        mat-raised-button
+        mat-dialog-close
+        (click)="openKinship(data)"
+        [color]="'list-it'"
+        class="but1"
+      >
         List Kinships
       </button>
       <button
@@ -73,7 +79,13 @@
       >
         Edit
       </button>
-      <button mat-raised-button mat-dialog-close color="warn" (click)="delete(data)" class="but3">
+      <button
+        mat-raised-button
+        mat-dialog-close
+        color="warn"
+        (click)="delete(data)"
+        class="but3"
+      >
         Delete
       </button>
     </mat-dialog-actions>
