--- a/src/app/kinships/create/create.component.html
+++ b/src/app/kinships/create/create.component.html
@@ -12,8 +12,8 @@
             <input matInput placeholder="Search Person" [matAutocomplete]="firstAutocomplete"
               [formControl]="firstSearchInputControl">
             <mat-autocomplete #firstAutocomplete="matAutocomplete">
-              <mat-option *ngFor="let person of firstFilteredPeople | async" [value]="person.document"
-                (click)="SetInfoFirstPerson(person.id)">
+              <mat-option *ngFor="let person of firstFilteredPeople | async"
+                [value]="person.name + ' ' + person.lastName" (click)="SetInfoFirstPerson(person.id)">
                 <span>{{person.name + ' ' + person.lastName}}</span> |
                 <small>{{person.document}}</small>
               </mat-option>
@@ -21,16 +21,17 @@
           </mat-form-field>
           <div *ngIf="firstPerson">
             <p>
-              <label class="attributes">Name: </label><label>{{ firstPerson.name + ' ' + firstPerson.lastName }}</label>
+              <label class="attributes">Document :
+              </label><label>{{ firstPerson.document }}</label>
             </p>
             <p>
               <label class="attributes">Birthdate: </label><label>{{ firstPerson.birthdate }}</label>
             </p>
             <p>
-              <label class="attributes">Gender: </label><label>{{ firstPerson.gender }}</label>
+              <label class="attributes">Gender : </label><label>{{ firstPerson.gender }}</label>
             </p>
             <p>
-              <label class="attributes">Country: </label><label>{{ firstPerson.country }}</label>
+              <label class="attributes">Country : </label><label>{{ firstPerson.country }}</label>
             </p>
           </div>
         </mat-card-content>
@@ -44,8 +45,8 @@
             <input matInput placeholder="Search Relative" [matAutocomplete]="secondAutocomplete"
               [formControl]="secondSearchInputControl">
             <mat-autocomplete #secondAutocomplete="matAutocomplete">
-              <mat-option *ngFor="let person of secondFilteredPeople | async" [value]="person.document"
-                (click)="SetInfoSecondPerson(person.id)">
+              <mat-option *ngFor="let person of secondFilteredPeople | async"
+                [value]="person.name + ' ' + person.lastName" (click)="SetInfoSecondPerson(person.id)">
                 <span>{{person.name + ' ' + person.lastName}}</span> |
                 <small>{{person.document}}</small>
               </mat-option>
@@ -53,17 +54,17 @@
           </mat-form-field>
           <div *ngIf="secondPerson">
             <p>
-              <label class="attributes">Name:
-              </label><label>{{ secondPerson.name + ' ' + secondPerson.lastName }}</label>
+              <label class="attributes">Document :
+              </label><label>{{ secondPerson.document }}</label>
             </p>
             <p>
-              <label class="attributes">Birthdate: </label><label>{{ secondPerson.birthdate }}</label>
+              <label class="attributes">Birthdate : </label><label>{{ secondPerson.birthdate }}</label>
             </p>
             <p>
-              <label class="attributes">Gender: </label><label>{{ secondPerson.gender }}</label>
+              <label class="attributes">Gender : </label><label>{{ secondPerson.gender }}</label>
             </p>
             <p>
-              <label class="attributes">Country: </label><label>{{ secondPerson.country }}</label>
+              <label class="attributes">Country : </label><label>{{ secondPerson.country }}</label>
             </p>
           </div>
         </mat-card-content>
@@ -74,7 +75,7 @@
         <mat-card-content>
           <form [formGroup]="createKinshipForm" (ngSubmit)="onSubmit()">
             <mat-form-field>
-              <mat-select placeholder="Kinship" formControlName="kinship">
+              <mat-select placeholder="Kinship" formControlName="kinshipType">
                 <mat-option *ngFor="let relation of relations" [value]="relation.value">{{ relation.type }}</mat-option>
               </mat-select>
             </mat-form-field>
