--- a/src/app/kinships/edit/edit.component.html
+++ b/src/app/kinships/edit/edit.component.html
@@ -1,35 +1,34 @@
-<section fxLayout="row wrap" fxLayoutAlign="center center" class="hide-scroll">
-  <mat-card fxFlex="500px" fxFlex.xs="100%" class="viewport">
-    <mat-card-title>Edit Kinship</mat-card-title>
-    <form [formGroup]="editkinship">
-      <div id="divForm">
-        <div class="px-2 py-2">
-          <mat-form-field>
-            <mat-label>Person</mat-label>
-            <input matInput formControlName="idPerson" readonly
-              value="{{ data.personName + ' ' + data.personLastName }}">
-          </mat-form-field>
-        </div>
-        <div class="px-2 py-2">
-          <mat-form-field>
-            <mat-label>Relative</mat-label>
-            <input matInput formControlName="idRelative" readonly
-              value="{{ data.relativeName + ' ' + data.relativeLastName }}">
-          </mat-form-field>
-        </div>
-        <div class="px-2 py-2" style="flex-direction: row;">
-          <mat-form-field>
-            <mat-label>Kinship</mat-label>
-            <mat-select placeholder="Kinship" [(value)]="relationSelected">
-              <mat-option *ngFor="let relation of relations" [value]="relation.value">{{ relation.type }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
+<section class="container p-2">
+  <div class="d-flex flex-row justify-content-center">
+    <p class="mat-display-1 mb-4">Modify Kinship</p>
+  </div>
+
+  <div id="divForm">
+    <div class="px-2 py-2">
+      <mat-form-field>
+        <mat-label>Person</mat-label>
+        <input matInput readonly value="{{ data.personName + ' ' + data.personLastName }}">
+      </mat-form-field>
+    </div>
+    <div class="px-2 py-2">
+      <mat-form-field>
+        <mat-label>Relative</mat-label>
+        <input matInput readonly value="{{ data.relativeName + ' ' + data.relativeLastName }}">
+      </mat-form-field>
+    </div>
+    <form [formGroup]="editkinship" (ngSubmit)="onSubmit()">
+      <div class="px-2 py-2" style="flex-direction: row;">
+        <mat-form-field>
+          <mat-label>Kinship</mat-label>
+          <mat-select placeholder="Kinship" [(value)]="relationSelected">
+            <mat-option *ngFor="let relation of relations" [value]="relation.value">{{ relation.type }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
       <br>
-      <mat-card-actions>
+      <div class="d-flex flex-row justify-content-center">
         <button type="submit" class="btn btn-primary">Save</button>
-      </mat-card-actions>
+      </div>
     </form>
-  </mat-card>
+  </div>
 </section>
