--- a/src/app/people/inspect/inspect.component.html
+++ b/src/app/people/inspect/inspect.component.html
@@ -4,11 +4,7 @@
       Person Details
     </h4>
 
-    <button
-      mat-icon-button
-      mat-dialog-close
-      aria-label="Example icon-button with a heart icon"
-    >
+    <button mat-icon-button mat-dialog-close aria-label="Example icon-button with a heart icon">
       <mat-icon>x</mat-icon>
     </button>
   </div>
@@ -16,34 +12,27 @@
   <main>
     <mat-dialog-content class="">
       <p>
-        <label class="attributes">Nombre: </label
-        ><label for="name">{{ data.person.name }}</label>
+        <label class="attributes">Nombre: </label><label for="name">{{ data.person.name }}</label>
       </p>
       <p>
-        <label class="attributes">Last Name: </label
-        ><label for="name">{{ data.person.lastName }}</label>
+        <label class="attributes">Last Name: </label><label for="name">{{ data.person.lastName }}</label>
       </p>
       <p>
-        <label class="attributes">Date of birth: </label
-        ><label for="birth">{{ data.person.birthdate }}</label>
+        <label class="attributes">Date of birth: </label><label for="birth">{{ data.person.birthdate }}</label>
       </p>
       <p class="justify-content-between">
         <span>
-          <label class="attributes">Document ID: </label
-          ><label for="id">{{ data.person.document }}</label>
+          <label class="attributes">Document ID: </label><label for="id">{{ data.person.document }}</label>
         </span>
         <span class="elem2">
-          <label class="attributes">Type: </label
-          ><label for="type">{{ data.person.documentType }}</label>
+          <label class="attributes">Type: </label><label for="type">{{ data.person.documentType }}</label>
         </span>
       </p>
       <p>
-        <label class="attributes">Gender: </label
-        ><label for="gender">{{ data.person.gender }}</label>
+        <label class="attributes">Gender: </label><label for="gender">{{ data.person.gender }}</label>
       </p>
       <p>
-        <label class="attributes">Country: </label
-        ><label for="country">{{ data.person.country }}</label>
+        <label class="attributes">Country: </label><label for="country">{{ data.person.country }}</label>
       </p>
       <p>
         <label class="attributes">Contact</label>
@@ -61,28 +50,13 @@
   </main>
   <footer>
     <mat-dialog-actions class="cont1">
-      <button
-        mat-raised-button
-        mat-dialog-close
-        (click)="openKinship(data)"
-        [color]="'list-it'"
-      >
+      <button mat-raised-button mat-dialog-close (click)="openKinship(data)" [color]="'list-it'">
         List Kinships
       </button>
-      <button
-        mat-raised-button
-        mat-dialog-close
-        (click)="openEdit(data)"
-        [color]="'edit-it'"
-      >
+      <button mat-raised-button mat-dialog-close (click)="openEdit(data)" [color]="'edit-it'">
         Edit
       </button>
-      <button
-        mat-raised-button
-        mat-dialog-close
-        color="warn"
-        (click)="delete(data)"
-      >
+      <button mat-raised-button mat-dialog-close color="warn" (click)="delete(data)" class="but3">
         Delete
       </button>
     </mat-dialog-actions>
